Fixed dev kustomizations, added loading div to obscure view of prismjs elements during loading to reduce flickering

--- a/resources/css/aphiria.scss
+++ b/resources/css/aphiria.scss
@@ -27,6 +27,16 @@ html {
 body {
     margin: 0;
     overflow-x: hidden;
+
+    &.docs.loading > main article #article-loading {
+        display: flex;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &.loading {
+        overflow: hidden;
+    }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -328,6 +338,23 @@ body > main {
 }
 
 body.docs > main article {
+    position: relative;
+
+    #article-loading {
+        transition: opacity 0.5s ease, visibility 0.5s ease;
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background: rgba(255, 255, 255, 0.8);
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5em;
+        z-index: 9999;
+    }
+
     h2, h3, h4, h5 {
         margin-bottom: 20px;
         color: #555;
@@ -698,7 +725,7 @@ blockquote {
 
             nav.toc-nav {
                 position: absolute;
-                right: 0;
+                right: -$docSidebarWidth;
                 width: $docSidebarWidth;
                 padding: 0 0 10px 20px;
                 top: $headerHeight;
